tripview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment
  namespace: web
  labels:
    app: tripviewer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryhbp2955.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: trips-api
  namespace: web
spec:
  type: ExternalName
  externalName: trips.api.svc.cluster.local
  ports:
  - port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: userprofile-service-api
  namespace: web
spec:
  type: ExternalName
  externalName: userprofile-service.api.svc.cluster.local
  ports:
  - port: 80
